# plethora

./: .fig.yaml  .gitignore  README.md  example.py  requirements.txt  setup.cfg
.github/workflows/: mypy-problem-matcher.json
config/: debug.yaml
doc/: author_and_copyright.md  conf.py  index.rst  installation.md  isensus.commands.rst  isensus.data.rst  isensus.errors.rst  isensus.rst  modules.rst  readme.txt  usage.md
notebooks/: scratch.ipynb
plethora/: __init__.py  _info.py  interface.py
plethora/community/: __init__.py
plethora/datasets/: __init__.py  base.py  buffers.py  disentangling.py  mnist.py  toy.py
plethora/framework/: __init__.py  abstract.py  base.py  criteria.py  distributions.py  exporting.py  extractors.py  features.py  hyperparameters.py  math.py  models.py  random.py  spaces.py  tensors.py  wrappers.py
plethora/framework/nn/: mlp.py  optim.py
plethora/framework/scikit/: __init__.py  builders.py  estimators.py
plethora/framework/util/: __init__.py  control_flow.py  data.py  math.py  misc.py  spaces.py  tensors.py
plethora/framework/utils/: __init__.py
plethora/tasks/: __init__.py  base.py
plethora/tasks/compression/: __init__.py  bits_back.py  compressors.py  lossless.py  lossy.py  task.py
plethora/tasks/generation/: __init__.py  discriminators.py  feature_tasks.py  inception.py  task.py
plethora/tasks/inference/: __init__.py  estimator.py  estimators.py  task.py
plethora/tasks/interpolation/: __init__.py  criterion.py  task.py
test/: test_loading.py
unused-.github/workflows/: docs.yaml  lint.yaml
(+10 files in other folders)
