[metadata]
name = plethora
description = "Plethora Representation Learning Evaluation Suite"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3.8
version = attr: plethora.__version__

[options]
packages = find:

[options.extras_require]
test = pytest
